<resources>
    <string name="dummy">dummy</string>
    <string name="CheckList_Grundförbättringar_title">Grundförbättringar</string>
    <string name="CheckList_Grundförbättringar_text">Grundförbättringar åtgärder har en mycket långsiktig positiv effekt på markstrukturen och utförs inte varje år.</string>
    <string name="CheckList_Odlingsåtgärder_title">Odlingsåtgärder</string>
    <string name="CheckList_Odlingsåtgärder_text">Åtgärder i odlingssystemet med positiv effekt på markstrukturen</string>
    <string name="CheckList_UndvikEllerMinimera_title">Undvik eller minimera</string>
    <string name="CheckList_UndvikEllerMinimera_text">Lika viktigt som det är att införa åtgärder som bygger upp markstrukturen lika viktigt är det att undvika att förstöra den goda markstruktur man byggt upp.</string>
    <string name="CheckListItem_Huvudavvattning_title">Huvudavvattning</string>
    <string name="CheckListItem_Huvudavvattning_text">God dränering och att avleda dräneringsvattenet från fältet är den viktigaste åtgärden. Se över brunnar, underhåll öppna diken och kulvertar.</string>
    <string name="CheckListItem_OrganiskaMaterial_title">Organiska material</string>
    <string name="CheckListItem_OrganiskaMaterial_text">Organiska material har en positiv effekt på alla jordar och speciellt på lättare jordar där inte leret kan ge en aggregatstruktur. Behåll och tillför så mycket organiskt material som möjligt.</string>
    <string name="CheckListItem_Detaljdränering_title">Detaljdränering</string>
    <string name="CheckListItem_Detaljdränering_text">Täckdikningen på fältet ger en snabb och jämn upptorkning, bra bärighet för maskiner, möjliggör ökat rotdjup. Se över brunnar, täckdikesögon, spolrensa ledningar, lägg ny täckdikning m.m.</string>
    <string name="CheckListItem_Strukturkalkning_title">Strukturkalkning</string>
    <string name="CheckListItem_Strukturkalkning_text">Kan användas på lerjordar för att stabilisera en bra markstruktur och i viss mån förbättra en dålig struktur.</string>
    <string name="CheckListItem_Alvluckring_title">Alvluckring</string>
    <string name="CheckListItem_Alvluckring_text">Kan i vissa extrema fall användas för att bryta förtätade skikt, men det finns en stor risk att man förstör den struktur som finns utan att bygga upp och stabilisera en ny.</string>
    <string name="CheckListItem_GynnaDaggmaskarna_title">Gynna daggmaskarna</string>
    <string name="CheckListItem_GynnaDaggmaskarna_text">Reducerad bearbetning, lämna organiskt material,använd stallgödsel med mera</string>
    <string name="CheckListItem_GrödorMedBraRotsystem_title">Grödor med bra rotsystem</string>
    <string name="CheckListItem_GrödorMedBraRotsystem_text">Fleråriga grödor, höstsådda grödor, alvluckrande grödor</string>
    <string name="CheckListItem_LämnaOrganisktMaterial_title">Lämna organiskt material</string>
    <string name="CheckListItem_LämnaOrganisktMaterial_text">Lämna halmen eller för tillbaka i form av stallgödsel</string>
    <string name="CheckListItem_PlaneraKörningen_title">Planera körningen_title</string>
    <string name="CheckListItem_PlaneraKörningen_text">Kör när jorden torkat upp, tillämpa fasta körspår, använd GPS-styrning med mera</string>
    <string name="CheckListItem_MinskaBelastningenPåMarken_title">Minska belastningen på marken</string>
    <string name="CheckListItem_MinskaBelastningenPåMarken_text">Lättare maskiner, dubbelmontage eller breda däck, sänk däckstrycket</string>
    <string name="CheckListItem_BeväxtMarkÅretOm_title">Beväxt mark året om</string>
    <string name="CheckListItem_BeväxtMarkÅretOm_text">Höstsådda grödor, mellangrödor</string>
    <string name="CheckListItem_UndvikTungaMaskiner_title">Undvik tunga maskiner</string>
    <string name="CheckListItem_UndvikTungaMaskiner_text">Minska risken för markpackning</string>
    <string name="CheckListItem_UndvikKörningVidVåtaMarkförhållanden_title">Undvik körning vid våta markförhållanden</string>
    <string name="CheckListItem_UndvikKörningVidVåtaMarkförhållanden_text">Minska risken för ältning av jorden och markpackning</string>
    <string name="CheckListItem_MinimeraAntaletÖverfarter_title">Undvik tunga maskiner</string>
    <string name="CheckListItem_MinimeraAntaletÖverfarter_text">Minskar risken för att man kör vid ogynnsamma tillfällen</string>
    <string name="CheckListItem_MinimeraAndelenBarMark_title">Undvik tunga maskiner</string>
    <string name="CheckListItem_MinimeraAndelenBarMark_text">Bevuxen mark skyddar mot erosion och ger bra upptorkning</string>
    <string name="mina_uppgifter">Mina uppgifter</string>
    <string name="namn">Namn</string>
    <string name="emailadress">E-mailadress</string>
    <string name="spara">Spara</string>
    <string name="toolbar_navigation_back">TILLBAKA</string>
    <string name="about_app_fragment_title">OM APPEN</string>
    <string name="about_app_section1_title">Vikten av god markstruktur</string>
    <string name="about_app_section2_title">Bakgrund</string>
    <string name="about_app_section3_title">Hur mår min jord?</string>
    <string name="about_app_section4_title">Vårda markstrukturen</string>
    <string name="about_app_section5_title">Följ upp och utvärdera</string>
    <string name="about_app_section1_description">God och stabil markstruktur är grunden för en väl fungerande odlingsjord. Det ökar odlingssäkerheten och möjligheterna att bedriva ett lönsamt jordbruk, med mindre klimat- och miljöpåverkan.</string>
    <string name="about_app_section2_description">Appen är utvecklad utifrån SLUs rapport "Markstrukturtest i fält". Rapporten finns i Kunskapsbanken. Där finns även en kort film om markstruktur och annan information.</string>
    <string name="about_app_section3_description">
        Appens tre deltest (allmänna frågor, markstrukturtest, infiltrationstest)  hjälper dig att få koll på markstrukturen. De  går att göra var för sig. Men bäst koll på din jord får du om du gör alla tre delarna. Testen går att göra närsomhelst, men funkar allra bäst när det är fuktigt i jorden.
        \n\nGör gärna testen på olika platser på samma fält för att lära känna din jord ännu bättre. Då kan du  jämföra bra, representativa och dåliga områden.
    </string>
    <string name="about_app_section4_description">Här finns  tips om  åtgärder för att vårda och förbättra  markstrukturen. Du kan  göra egna checklistor för de åtgärder  du tycker passar bäst för dina skiften.</string>
    <string name="about_app_section5_description">
        Genom att regelbundet utföra testerna håller du markstrukturen under uppsikt och märker effekterna av dina odlingsåtgärder. Det hjälper dig att utveckla en långsiktig strategi för att förbättra markstrukturen på dina åkrar.
        \n\nDet går att exportera utförda test från appen, och att importera tillbaka dem, med uppgifter om position. Så du ska kunna återkomma och följa upp tidigare test.
        \n\nDu kan även skicka enskilda testresultat som PDF med e-post till dig själv eller, till exempel, en rådgivare. Du kan också skapa en PDF med en summering av dina tre deltest för en plats.
    </string>
    <string name="settings">Inställningar</string>
    <string name="knowledgebank">Kunskapsbank</string>
    <string name="about">Om appen</string>
    <string name="version"><![CDATA[Utvecklare & datahantering]]></string>
    <string name="cross_with_close_text">kryss med texten stäng</string>
    <string name="settings_icon">kugghjul som representerar inställningar</string>
    <string name="knowledgebank_icon">tankebubbla som innehåller citattecken</string>
    <string name="about_icon">anteckningsblock med bokstaven i på omslaget</string>
    <string name="version_icon">mobiltelefon med programmeringsikon på framsidan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jordbruksverket_icon">jordbruksverket_icon</string>
    <string name="data_privacy_policy_applikationen">Applikationen</string>
    <string name="data_privacy_policy_appInfoText">Är utformad och utvecklad av Jordbruksverket i samarbete med SLU och Mobile Interaction och finansierad genom EUs landsbygdsprogram.</string>
    <string name="data_privacy_policy_feedbackButton">Skicka feedback eller rappotera fel</string>
    <string name="data_privacy_policy_hanteringHeader">Hantering av data i appen</string>
    <string name="data_privacy_policy_hanteringText1">Information som du anger sparas bara i appen. Det är endast om du som använder aktivt väljer att exportera testresultat som information lämnar appen. Den skickas då bara till den e-postadress du angivit. Det finns ingen koppling mellan data i appen och Jordbruksverkets IT-system.</string>
    <string name="data_privacy_policy_hanteringText2">Om du behöver ominstallera appen och har utförda test du vill spara; exportera dem då först så att du kan importera tillbaka dem utan att förlora någon information.</string>
    <string name="data_privacy_policy_header_close">TILLBAKA</string>
    <string name="data_privacy_policy_header">UTVECKLARE</string>
    <string name="new_picture">Ta ny</string>
    <string name="use_image">Använd</string>
    <string name="bottom_navbar_text">av</string>
    <string name="new_test_title">Om testerna</string>
    <string name="new_test_text">Du har tre deltester att välja på. Testerna går att göra var för sig men bäst koll på ditt skifte får du om du gör alla tre. Resultaten från de tre deltesten kan summeras i Mina test. \n\nAllmänna frågor om skiftet ger dig en översiktlig bild av skiftets generella status och om det finns strukturproblem som kan behöva åtgärdas. Detta test kan göras inomhus. \n\nMarkstrukturtest i fält och Infiltrationstest hjälper dig att lära känna dina odlingsjordar bättre. Dessa två tester görs ute i fält och ger en beskrivning av markens strukturtillstånd på platsen. Fälttesterna fungerar bäst när marken är fuktig och rötter studeras bäst på hösten. \n\nAlla uppgifter sparas löpande i appen. Du kan bläddra framåt och tillbaka, gå ur ett påbörjat test eller tappa uppkopplingen, utan att förlora data. Testen hittar du under Mina Test.</string>
    <string name="newtest_test_1_title">Test 1</string>
    <string name="newtest_test_1_text">Allmänna frågor om skiftet</string>
    <string name="newtest_test_2_title">Test 2</string>
    <string name="newtest_test_2_text">Markstrukturtest</string>
    <string name="newtest_test_3_title">Test 3</string>
    <string name="newtest_test_3_text">Infiltrationstest</string>
    <string name="navigation_back">Gå bakåt till testets förra sida</string>
    <string name="navigation_forward">Gå framåt till testets nästa sida</string>
    <string name="varda_markstruktur_beskrivning">Beskrivning</string>
    <string name="varda_markstruktur_text1">Markstrukturen påverkas på kort och lång sikt av de grundförbättrings- och odlingsåtgärder som brukaren gör. \n\n Här får du tips om olika markvårdande åtgärder och vad man bör undvika och minimera för att uppnå en bra markstruktur och kan göra en egen, översiktlig, åtgärdslista.</string>
    <string name="varda_markstruktur_bold_text">Kom ihåg att allt som gynnar grödan gynnar markstrukturen!</string>
    <string name="varda_markstruktur_Atgarder">Åtgärder</string>
    <string name="varda_markstruktur_odlingsatgarder">Odlingsåtgärder</string>
    <string name="varda_markstruktur_grundforbattringar">Grundförbättringar</string>
    <string name="varda_markstruktur_undvik_eller_minimera">Undvik eller minimera</string>
    <string name="varda_markstruktur_export_button">Exportera Checklista (PDF)</string>
    <string name="check_list_text1">Anpassa listan efter dina egna förutsättningar. Välj bort de åtgärder som inte är aktuella genom att trycka på krysset till vänster. Du kan alltid lägga till åtgärderna igen om något förändras.</string>
    <string name="check_list_label_atgardslista">Åtgärdslista</string>
</resources>