<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/aboutApp_fragment_container">

    <LinearLayout
        android:id="@+id/topAppBar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <include
        android:id="@+id/topAppBar"
        layout="@layout/appbar_customtoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_editor_absoluteX="1dp"
    app:layout_editor_absoluteY="1dp"
    android:fillViewport="true"
    android:id="@+id/about_app_scrollview">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appBackgroundColor"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/aboutSection1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/opensans_semi_bold"
            android:text="@string/about_app_section1_title"
            android:textColor="@color/aboutSectionTitleColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/aboutSection1_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/about_app_section1_description"
            android:textColor="@color/aboutSectionDescriptionColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutSection1_title" />

        <TextView
            android:id="@+id/aboutSection2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/opensans_semi_bold"
            android:text="@string/about_app_section2_title"
            android:textColor="@color/aboutSectionTitleColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutSection1_description" />

        <TextView
            android:id="@+id/aboutSection2_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/about_app_section2_description"
            android:textColor="@color/aboutSectionDescriptionColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutSection2_title" />

        <TextView
            android:id="@+id/aboutSection3_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/opensans_semi_bold"
            android:text="@string/about_app_section3_title"
            android:textColor="@color/aboutSectionTitleColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutSection2_description" />

        <TextView
            android:id="@+id/aboutSection3_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/about_app_section3_description"
            android:textColor="@color/aboutSectionDescriptionColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutSection3_title" />

        <TextView
            android:id="@+id/aboutSection4_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/opensans_semi_bold"
            android:text="@string/about_app_section4_title"
            android:textColor="@color/aboutSectionTitleColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutSection3_description" />

        <TextView
            android:id="@+id/aboutSection4_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/about_app_section4_description"
            android:textColor="@color/aboutSectionDescriptionColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutSection4_title" />

        <TextView
            android:id="@+id/aboutSection5_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/opensans_semi_bold"
            android:text="@string/about_app_section5_title"
            android:textColor="@color/aboutSectionTitleColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutSection4_description" />

        <TextView
            android:id="@+id/aboutSection5_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_marginTop="12dp"
            android:paddingBottom="40dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/about_app_section5_description"
            android:textColor="@color/aboutSectionDescriptionColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutSection5_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</LinearLayout>